--- a/todo.Rmd
+++ b/todo.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## R-Ladies Munich
 
-[Full tech instructions]("https://github.com/rladies/starter-kit/wiki/Tech-Infrastructure-for-Chapters")
+[Full tech instructions](https://github.com/rladies/starter-kit/wiki/Tech-Infrastructure-for-Chapters)
 
 Task                 | Status
 -------------------- | --------------------
