--- a/events/5.20180309/RLadiesMunichNewsMarch2018.Rmd
+++ b/events/5.20180309/RLadiesMunichNewsMarch2018.Rmd
@@ -5,8 +5,8 @@ author: "Daloha Rodriguez-Molina <br> <br/> Slides available at <br/> https://bi
 date: "March 2018"
 output:
   xaringan::moon_reader:
-    css: ["default", "rladies", "rladies-fonts"]
     lib_dir: libs
+    css: ["default", "rladies", "rladies-fonts"]
     nature:
       highlightStyle: github
       highlightLines: true
@@ -17,6 +17,7 @@ output:
 options(htmltools.dir.version = FALSE)
 library(icon)
 ```
+
 class: center, middle
 
 # News:
@@ -65,6 +66,18 @@ background-size: 80%
 class: center, bottom, inverse
 
 ---
+
+background-image: url(images/6.png)
+background-position: 50% 12%
+class: center, bottom, inverse
+
+---
+
+background-image: url(images/7.png)
+background-position: 50% 12%
+class: center, bottom, inverse
+
+---
 class: center, middle
 
 # Follow @rladies_iwd2018
@@ -100,10 +113,10 @@ class: inverse, center, middle
 
 # Keep in touch!
 
-`r icon::fa("paper-plane")` <a href="mailto:daloha@rladies.org"><i class="fa fa-paper-plane fa-fw"></i>&nbsp; daloha@rladies.org</a><br>
-`r icon::fa("paper-plane")` <a href="mailto:munich@rladies.org"><i class="fa fa-paper-plane fa-fw"></i>&nbsp; munich@rladies.org</a><br>
-`r icon::fa("link")` <a href="https://drmolina.netlify.com"><i class="fa fa-link fa-fw"></i>&nbsp; drmolina.netlify.com</a><br>
-`r icon::fa("twitter")` <a href="http://twitter.com/darokun"><i class="fa fa-twitter fa-fw"></i>&nbsp; @darokun</a><br>
-`r icon::fa("github")` <a href="http://github.com/darokun"><i class="fa fa-github fa-fw"></i>&nbsp; @darokun</a><br>
+<a href="mailto:daloha@rladies.org"><i class="fa fa-paper-plane fa-fw"></i>&nbsp; daloha@rladies.org</a><br>
+<a href="mailto:munich@rladies.org"><i class="fa fa-paper-plane fa-fw"></i>&nbsp; munich@rladies.org</a><br>
+<a href="https://drmolina.netlify.com"><i class="fa fa-link fa-fw"></i>&nbsp; drmolina.netlify.com</a><br>
+<a href="http://twitter.com/darokun"><i class="fa fa-twitter fa-fw"></i>&nbsp; @darokun</a><br>
+<a href="http://github.com/darokun"><i class="fa fa-github fa-fw"></i>&nbsp; @darokun</a><br>
 
 
